--- a/lesson_13/css/style.css
+++ b/lesson_13/css/style.css
@@ -10,13 +10,14 @@ h2 {
 	display: inline-block;
 	font-size: 12px;
 	font-weight: bold;
+	margin-top: 16px;
 }
 .box input {
 	width: 250px;
 	height: 30px;
 	background: url(../imgs/bg.png);
 	display: block;
-	border: 0;
+	border: 1px solid #cccccc;
 	padding-left: 10px;
 }
 
@@ -28,20 +29,23 @@ h2 {
 	right: 50%;
 	margin-right: -185px;
 	top: 50%;
-	margin-top: -160px;
+	margin-top: -132px;
+	border: 1px solid #cccccc;
 }
 .cre-acc {
 	background-color: #00cccc;
 	color: white;
 	text-transform: uppercase;
-	font-weight: 800;
+	font-weight: 700;
 	font-size: 12px;
-	padding: 10px;
+	text-align:center;
+	padding: 5px 9px;
+	padding-right: 3px;
 	position: absolute;
 	right: 50%;
-	margin-right: -62px;
+	margin-right: -40px;
 	top: 50%;
-	margin-top: -170px;
+	margin-top: -136px;
 }
 .form {
 	margin: 35px 30px 35px 30px;
@@ -57,12 +61,12 @@ h2 {
 	background-color: #00cccc;
 	color: #fff;
 	text-transform: uppercase;
-	font-weight: bold;
+	font-weight: 700;
 	font-size: 16px;
-	height: 45px;
-	width: 260px;
+	height: 47px;
+	width: 258px;
 	text-align: center;
-	margin-top: 35px;
-	padding: 3px;
+	margin-top: 30px;
+	padding: 1px;
 	border-radius: 5px;
 }
