--- a/lesson_15/css/style.css
+++ b/lesson_15/css/style.css
@@ -42,6 +42,7 @@ a:hover {
   border: 0;
   border-radius: 1rem;
   text-transform: uppercase;
+  text-align: right;
 }
 /* Main */
 .main-content h1 {
