--- a/lesson_14.1/css/style.css
+++ b/lesson_14.1/css/style.css
@@ -1,11 +1,72 @@
+/* Bebas */
 @font-face {
-	font-family: 'Bebas';
-	src: url('../fonts/Bebas.eot');
-	src: url('../fonts/Bebas.eot?#iefix') format('embedded-opentype'),
-		url('../fonts/Bebas.woff2') format('woff2'),
-		url('../fonts/Bebas.woff') format('woff'),
-		url('../fonts/Bebas.ttf') format('truetype'),
-		url('../fonts/Bebas.svg#Bebas') format('svg');
+	font-family: 'Bebas Neue';
+	src: url('../fonts/bebas/BebasNeueBold.eot');
+	src: url('../fonts/bebas/BebasNeueBold.eot?#iefix') format('embedded-opentype'),
+		url('../fonts/bebas/BebasNeueBold.woff2') format('woff2'),
+		url('../fonts/bebas/BebasNeueBold.woff') format('woff'),
+		url('../fonts/bebas/BebasNeueBold.ttf') format('truetype'),
+		url('../fonts/bebas/BebasNeueBold.svg#BebasNeueBold') format('svg');
+	font-weight: bold;
+	font-style: normal;
+}
+
+@font-face {
+	font-family: 'Bebas Neue';
+	src: url('../fonts/bebas/BebasNeueRegular.eot');
+	src: url('../fonts/bebas/BebasNeueRegular.eot?#iefix') format('embedded-opentype'),
+		url('../fonts/bebas/BebasNeueRegular.woff2') format('woff2'),
+		url('../fonts/bebas/BebasNeueRegular.woff') format('woff'),
+		url('../fonts/bebas/BebasNeueRegular.ttf') format('truetype'),
+		url('../fonts/bebas/BebasNeueRegular.svg#BebasNeueRegular') format('svg');
+	font-weight: normal;
+	font-style: normal;
+}
+/* Lato */
+@font-face {
+	font-family: 'Lato';
+	src: url('../fonts/Lato/Lato-Italic.eot');
+	src: url('../fonts/Lato/Lato-Italic.eot?#iefix') format('embedded-opentype'),
+		url('../fonts/Lato/Lato-Italic.woff2') format('woff2'),
+		url('../fonts/Lato/Lato-Italic.woff') format('woff'),
+		url('../fonts/Lato/Lato-Italic.ttf') format('truetype'),
+		url('../fonts/Lato/Lato-Italic.svg#Lato-Italic') format('svg');
+	font-weight: normal;
+	font-style: italic;
+}
+
+@font-face {
+	font-family: 'Lato';
+	src: url('../fonts/Lato/Lato-Bold.eot');
+	src: url('../fonts/Lato/Lato-Bold.eot?#iefix') format('embedded-opentype'),
+		url('../fonts/Lato/Lato-Bold.woff2') format('woff2'),
+		url('../fonts/Lato/Lato-Bold.woff') format('woff'),
+		url('../fonts/Lato/Lato-Bold.ttf') format('truetype'),
+		url('../fonts/Lato/Lato-Bold.svg#Lato-Bold') format('svg');
+	font-weight: bold;
+	font-style: normal;
+}
+
+@font-face {
+	font-family: 'Lato';
+	src: url('../fonts/Lato/Lato-Light.eot');
+	src: url('../fonts/Lato/Lato-Light.eot?#iefix') format('embedded-opentype'),
+		url('../fonts/Lato/Lato-Light.woff2') format('woff2'),
+		url('../fonts/Lato/Lato-Light.woff') format('woff'),
+		url('../fonts/Lato/Lato-Light.ttf') format('truetype'),
+		url('../fonts/Lato/Lato-Light.svg#Lato-Light') format('svg');
+	font-weight: 300;
+	font-style: normal;
+}
+
+@font-face {
+	font-family: 'Lato';
+	src: url('../fonts/Lato/Lato-Regular.eot');
+	src: url('../fonts/Lato/Lato-Regular.eot?#iefix') format('embedded-opentype'),
+		url('../fonts/Lato/Lato-Regular.woff2') format('woff2'),
+		url('../fonts/Lato/Lato-Regular.woff') format('woff'),
+		url('../fonts/Lato/Lato-Regular.ttf') format('truetype'),
+		url('../fonts/Lato/Lato-Regular.svg#Lato-Regular') format('svg');
 	font-weight: normal;
 	font-style: normal;
 }
@@ -28,7 +89,7 @@ small {
 	font-family: 'Open Sans', sans-serif;
 }
 .bebas {
-	font-family: 'Bebas', sans-serif;
+	font-family: 'Bebas Neue', sans-serif;
 }
 .lobster {
 	font-family: 'Lobster', sans-serif;
