--- a/lesson_17/less/style.less
+++ b/lesson_17/less/style.less
@@ -219,6 +219,9 @@ small.bellow-form{
 	height: 2rem;
 	border: none;
 }
+.arrow:hover {
+	cursor: pointer;
+}
 .prev {
 	background: url(../icons/arrow-left.svg) center center no-repeat;
 	left: 0;
