--- a/lesson_17/css/style.css
+++ b/lesson_17/css/style.css
@@ -26,6 +26,7 @@ html {
 body {
   font-family: 'ProximaNova-Regular' sans-serif;
 }
+button,
 a,
 a:focus,
 a:active,
@@ -183,6 +184,7 @@ small.bellow-form {
   display: inline-block;
   width: 80%;
 }
+.features-img,
 .slick-active {
   outline: none;
 }
@@ -196,16 +198,15 @@ small.bellow-form {
   height: 2rem;
   border: none;
 }
-.arrow:hover {
-  cursor: pointer;
-}
 .prev {
   background: url(../icons/arrow-left.svg) center center no-repeat;
+  background: url(../icons/arrow-left.png) center center no-repeat;
   left: 0;
   background-size: 70%;
 }
 .next {
   background: url(../icons/arrow.svg) center center no-repeat;
+  background: url(../icons/arrow-right.png) center center no-repeat;
   right: 0;
   background-size: 70%;
 }
