--- a/lesson_17/less/style.less
+++ b/lesson_17/less/style.less
@@ -48,7 +48,7 @@ html {
 body {
 	.reg();
 }
-a,a:focus,a:active,a:visited,a:hover {
+button,a,a:focus,a:active,a:visited,a:hover {
 	text-decoration: none;
 	outline: none;
 }
@@ -206,7 +206,7 @@ small.bellow-form{
 		width: 80%;
 	}
 }
-.slick-active {
+.features-img,.slick-active {
 	outline: none;
 }
 .arrow {
@@ -219,16 +219,15 @@ small.bellow-form{
 	height: 2rem;
 	border: none;
 }
-.arrow:hover {
-	cursor: pointer;
-}
 .prev {
 	background: url(../icons/arrow-left.svg) center center no-repeat;
+	background: url(../icons/arrow-left.png) center center no-repeat;
 	left: 0;
 	background-size: 70%;
 }
 .next {
 	background: url(../icons/arrow.svg) center center no-repeat;
+	background: url(../icons/arrow-right.png) center center no-repeat;
 	right: 0;
 	background-size: 70%;
 }
