--- a/lesson_17/css/style.css
+++ b/lesson_17/css/style.css
@@ -184,7 +184,7 @@ small.bellow-form {
   display: inline-block;
   width: 80%;
 }
-.features-img,
+.features-block,
 .slick-active {
   outline: none;
 }
