--- a/lesson_19.1/css/style.css
+++ b/lesson_19.1/css/style.css
@@ -77,6 +77,9 @@ body {
   margin-top: -15px;
   display: block;
 }
+#home small a {
+  color: red;
+}
 #home small:hover {
   -webkit-animation-play-state: paused;
           animation-play-state: paused;
