--- a/lesson_22/css/style.css
+++ b/lesson_22/css/style.css
@@ -620,6 +620,15 @@ small.bellow-form {
     font-size: 1.2rem;
   }
 }
+@media (max-width: 420px) {
+	.popup {
+		&-close {
+			top: -.9rem;
+			right: 1rem;
+			color: black;
+		}
+	}
+}
 @media (max-width: 400px) {
   .main-tittle h1 {
     font-size: 2rem;
