--- a/lesson_22/css/style.css
+++ b/lesson_22/css/style.css
@@ -621,13 +621,11 @@ small.bellow-form {
   }
 }
 @media (max-width: 420px) {
-	.popup {
-		&-close {
-			top: -.9rem;
-			right: 1rem;
-			color: black;
-		}
-	}
+  .popup-close {
+    top: -0.9rem;
+    right: 1rem;
+    color: black;
+  }
 }
 @media (max-width: 400px) {
   .main-tittle h1 {
