--- a/lesson_21.1/assets/less/hero.less
+++ b/lesson_21.1/assets/less/hero.less
@@ -1,7 +1,6 @@
 /* ======= Hero Section ======= */
 .hero-section {
     min-height: 560px;
-    background: @text-color;
     position: relative;
     
     .figure-holder-wrapper {
@@ -32,7 +31,7 @@
     .carousel-inner {
         .item {
             height: 560px;
-            background-position: center center;
+            background-position: center center no-repeat;
         }
         .item-1 {
             background-image: url('../images/hero-1.jpg');
